<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="use_bottom_uz_timebar">use_bottom_uz_timebar</string>
    <string name="speed">Speed</string>
    <string name="error_change_skin_with_vdhview">You cannot change skin because you use UzPlayer with UzDraggableLayout.</string>
    <string name="error_speed_live_content">Error UizaSpeed: You cannot set speed with live content.</string>
    <string name="error_speed_illegal">Error UizaSpeed: Please set speed with the value between -3 and 3.</string>
    <string name="tks_4_watching">Thanks for your watching</string>
    <string name="default_stats_1">----</string>
    <string name="default_stats_2">-- / --</string>
    <string name="default_stats_3">-- / -- / --</string>
    <string name="video_format">Video Format</string>
    <string name="audio_format">Audio Format</string>
    <string name="stat_entity_id">Video Entity ID</string>
    <string name="stat_buffer_health">Buffer Health</string>
    <string name="stat_network_activity">Network Activity</string>
    <string name="stat_volume">Volume</string>
    <string name="stat_current_optimal_res">Current / Optimal Res</string>
    <string name="stat_viewport_frames">Viewport / Frames</string>
    <string name="stat_connection_speed">Connection Speed</string>
    <string name="stat_host">Host</string>
    <string name="stat_sdk_player_api_version">SDK / Player / API Version</string>
    <string name="stat_os_device_info">Device Info</string>
    <string name="stat_live_stream_latency">Live stream latency</string>

    <string name="format_viewport_frame">%1$dx%2$d / %3$d dropped frames</string>
    <string name="format_audio_format">%1$s %2$dHz</string>
    <string name="format_video_format">%1$s %2$dx%3$d@%4$d</string>
    <string name="format_volume">%1$d%%</string>
    <string name="format_version">%1$s / %2$s / %3$d</string>
    <string name="format_connection_speed_k">%1$s kbps</string>
    <string name="format_connection_speed_m">%1$s mbps</string>
    <string name="format_device_info">%1$s / Android: %2$s</string>
    <string name="format_buffer_health">%1$s s</string>
    <string name="format_resolution">%1$dx%2$d / %3$dx%4$d</string>
    <string name="format_live_stream_latency">%s ms</string>
</resources>