<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:background="@color/black_65"
    >
    <LinearLayout
        android:id="@+id/ln_layout_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="vertical"
        >
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video_format"
            android:textColor="@color/White"
            android:textSize="@dimen/sp_12"
            tools:text="Video Format"
            />
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/audio_format"
            android:textColor="@color/White"
            android:textSize="@dimen/sp_12"
            tools:text="Audio Format"
            />
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stat_connection_speed"
            android:textColor="@color/White"
            android:textSize="@dimen/sp_12"
            tools:text="Connection Speed"
            />
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stat_buffer_health"
            android:textColor="@color/White"
            android:textSize="@dimen/sp_12"
            tools:text="Buffer Health"
            />
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stat_network_activity"
            android:textColor="@color/White"
            android:textSize="@dimen/sp_12"
            tools:text="Network Activity"
            />
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stat_volume"
            android:textColor="@color/White"
            android:textSize="@dimen/sp_12"
            tools:text="Volume"
            />
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stat_viewport_frames"
            android:textColor="@color/White"
            android:textSize="@dimen/sp_12"
            tools:text="Viewport / Frames"
            />
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stat_current_optimal_res"
            android:textColor="@color/White"
            android:textSize="@dimen/sp_12"
            tools:text="Current / Optimal Res"
            />
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stat_entity_id"
            android:textColor="@color/White"
            android:textSize="@dimen/sp_12"
            tools:text="Video Entity ID"
            />
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stat_host"
            android:textColor="@color/White"
            android:textSize="@dimen/sp_12"
            tools:text="Host"
            />
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stat_sdk_player_api_version"
            android:textColor="@color/White"
            android:textSize="@dimen/sp_12"
            tools:text="SDK / Player / API Version"
            />
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stat_os_device_info"
            android:textColor="@color/White"
            android:textSize="@dimen/sp_12"
            tools:text="Device Info"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ln_layout_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_10"
        android:layout_toEndOf="@+id/ln_layout_title"
        android:orientation="vertical"
        >
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_video_format"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_stats_1"
            android:textColor="@color/White"
            android:textSize="@dimen/sp_12"
            tools:text="video/avc 1280x720@30"
            />
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_audio_format"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_stats_1"
            android:textColor="@color/White"
            android:textSize="@dimen/sp_12"
            tools:text="audio/mp4a-latm 48000Hz"
            />
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_connection_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_stats_1"
            android:textColor="@color/White"
            android:textSize="@dimen/sp_12"
            tools:text="44420 Kbps"
            />
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_buffer_health"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_stats_1"
            android:textColor="@color/White"
            android:textSize="@dimen/sp_12"
            tools:text="48.48 s"
            />
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_network_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_stats_1"
            android:textColor="@color/White"
            android:textSize="@dimen/sp_12"
            tools:text="0 KB"
            />
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_volume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_stats_2"
            android:textColor="@color/White"
            android:textSize="@dimen/sp_12"
            tools:text="50%"
            />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_viewport_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_stats_2"
            android:textColor="@color/White"
            android:textSize="@dimen/sp_12"
            tools:text="806x453*2.00 / 0 dropped of 184"
            />
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_current_optimal_res"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_stats_2"
            android:textColor="@color/White"
            android:textSize="@dimen/sp_12"
            tools:text="806x453 / 1280x720"
            />
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_entity_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:maxLines="1"
            android:text="@string/default_stats_1"
            android:textColor="@color/White"
            android:textSize="@dimen/sp_12"
            tools:text="c62a5409-0e8a-4b11-8e0d-c58c43d81b60"
            />
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_host"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_stats_1"
            android:textColor="@color/White"
            android:textSize="@dimen/sp_12"
            tools:text="https://uiza.io"
            />
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_versions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_stats_3"
            android:textColor="@color/White"
            android:textSize="@dimen/sp_12"
            tools:text="3.16.0 / 2.9.5 / 3.0"
            />
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_device_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:text="@string/default_stats_2"
            android:textColor="@color/White"
            android:textSize="@dimen/sp_12"
            tools:text="Nexus 5 / Android 8.0"
            />
    </LinearLayout>
    <ImageView
        android:id="@+id/btn_close"
        android:layout_width="@dimen/w_30"
        android:layout_height="@dimen/w_30"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="@dimen/padding_20"
        android:background="@drawable/pdlg_icon_close"
        android:contentDescription="@null"
        />
</RelativeLayout>
